Fix video alignment

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,20 +8,12 @@ body {
     padding-top: 20px;
 }
 
-#video_container{
-    position:relative;
-    width: 640px;
-    height: 480px;
-    margin: auto;
-    border: 1px solid black;
-}
-
-
 #videos {
     margin: 0 auto;
     width: 640px;
     height: 480px;
     border: 1px solid black;
+    position: relative;
 }
 
 #videos video:not(:first-child) {
